add github three use

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8080
+
+github.client.id = f7011aa908398657eca0
+github.client.secret = 0a962bc3d8da3924cad291a45a82352915d2fd89
+github.redirect.uri = http://localhost:8080/callback
