--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,9 @@ server.port=8080
 github.client.id = f7011aa908398657eca0
 github.client.secret = 0a962bc3d8da3924cad291a45a82352915d2fd89
 github.redirect.uri = http://localhost:8080/callback
+
+
+spring.datasource.url=jdbc:h2:~/community
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=org.h2.Driver
